Finish refactoring 1 part
