# product-api/swagger.yaml
@@ -3,34 +3,41 @@ consumes:
 - application/json
 definitions:
   GenericError:
+    description: GenericError generic error
     properties:
       message:
+        description: message
         type: string
         x-go-name: Message
     type: object
-    x-go-package: building-microservices/product-api/handlers
+    x-go-package: github.com/ilia-tsyplenkov/building-microservices/product-api/sdk/models
   Product:
-    description: Product defines the structure for an API product
+    description: Product Product defines the structure for an API product
     properties:
       description:
+        description: description
         maxLength: 10000
         type: string
         x-go-name: Description
       id:
+        description: ID
         format: int64
         minimum: 1
         type: integer
         x-go-name: ID
       name:
+        description: name
         maxLength: 255
         type: string
         x-go-name: Name
       price:
+        description: price
         format: float
         minimum: 0.01
         type: number
         x-go-name: Price
       sku:
+        description: s k u
         pattern: '[a-z]+-[a-z]+-[a-z]+'
         type: string
         x-go-name: SKU
@@ -39,16 +46,18 @@ definitions:
     - price
     - sku
     type: object
-    x-go-package: building-microservices/product-api/data
+    x-go-package: github.com/ilia-tsyplenkov/building-microservices/product-api/sdk/models
   ValidationError:
+    description: ValidationError validation error
     properties:
       messages:
+        description: messages
         items:
           type: string
         type: array
         x-go-name: Messages
     type: object
-    x-go-package: building-microservices/product-api/handlers
+    x-go-package: github.com/ilia-tsyplenkov/building-microservices/product-api/sdk/models
 info:
   description: Documentation for Product API
   title: of Product API
@@ -58,6 +67,13 @@ paths:
     get:
       description: Returns a list of products
       operationId: listProducts
+      parameters:
+      - description: |-
+          Currency used when returning the price of the product
+          when not specified currency is returned in GBP
+        in: query
+        name: Currency
+        type: string
       responses:
         "200":
           $ref: '#/responses/productsResponse'
@@ -126,6 +142,12 @@ paths:
       description: Returns the product
       operationId: listSingleProduct
       parameters:
+      - description: |-
+          Currency used when returning the price of the product
+          when not specified currency is returned in GBP
+        in: query
+        name: Currency
+        type: string
       - description: The id for the product to delete from database
         format: int64
         in: path
